# project-cutter

./: .gitignore  .pre-commit-config.yaml  TODO.md  cookicutter.json.bak  cookiecutter.json  justfile  pyproject.toml  run
.github/workflows/: create-or-update-repo.yml  pr.yml
tests/: conftest.py  consts.py
tests/fixtures/: __init__.py  project_dir.py
tests/functional_tests/: __init__.py  test__build_package.py  test__generate_project.py  test__justfile.py
tests/utils/: __init__.py  init_git_repo.py  misc.py  project.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  justfile  pyproject.toml  run
{{cookiecutter.repo_name}}/.github/workflows/: pr.yml
{{cookiecutter.repo_name}}/src/: pyproject.toml
{{cookiecutter.repo_name}}/src/{{cookiecutter.example_pkg}}/: __init__.py  main.py
{{cookiecutter.repo_name}}/tests/: const.py  test__main.py
